Added oAuth with google

--- a/templates/job-application.ejs
+++ b/templates/job-application.ejs
@@ -53,7 +53,7 @@
       </p>
 
       <p>
-        With almost <%= experience || '3' %> years of experience in building scalable backend
+        With almost <%= experience || '3' %> years of experience in building scalable
         applications with <%= skills || 'modern technologies' %>, I am confident in my ability to contribute
         effectively to your team.
       </p>
